--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 		"dev": "vite",
 		"build": "vite build",
 		"preview": "vite preview",
-		"test": "jest"
+		"test": "vitest"
 	},
 	"dependencies": {
 		"preact": "^10.22.1",
@@ -18,12 +18,14 @@
 		"@testing-library/jest-dom": "^6.5.0",
 		"@testing-library/preact": "^3.2.4",
 		"@types/jest": "^29.5.13",
+		"@vitest/ui": "^2.1.1",
 		"eslint": "^8.57.1",
 		"eslint-config-preact": "^1.5.0",
 		"jest": "^29.7.0",
 		"ts-jest": "^29.2.5",
 		"typescript": "^5.6.2",
-		"vite": "^5.3.3"
+		"vite": "^5.3.3",
+		"vitest": "^2.1.1"
 	},
 	"eslintConfig": {
 		"extends": "preact"
