--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
 		"preact": "^10.22.1",
 		"preact-iso": "^2.6.3",
 		"react95": "^4.0.0",
-		"styled-components": "^6.1.13"
+		"styled-components": "^6.1.13",
+		"react": "npm:@preact/compat",
+		"react-dom": "npm:@preact/compat",
+		"react-router-dom": "^6.23.0"
 	},
 	"devDependencies": {
 		"@preact/preset-vite": "^2.9.0",
@@ -21,8 +24,6 @@
 		"@vitest/ui": "^2.1.1",
 		"eslint": "^8.57.1",
 		"eslint-config-preact": "^1.5.0",
-		"jest": "^29.7.0",
-		"ts-jest": "^29.2.5",
 		"typescript": "^5.6.2",
 		"vite": "^5.3.3",
 		"vitest": "^2.1.1"
