--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
 	"dependencies": {
 		"preact": "^10.22.1",
 		"preact-iso": "^2.6.3",
-		"react95": "^4.0.0",
-		"styled-components": "^6.1.13",
 		"react": "npm:@preact/compat",
 		"react-dom": "npm:@preact/compat",
-		"react-router-dom": "^6.23.0"
+		"react-icons": "^5.3.0",
+		"react-router-dom": "^6.23.0",
+		"react95": "^4.0.0",
+		"styled-components": "^6.1.13"
 	},
 	"devDependencies": {
 		"@preact/preset-vite": "^2.9.0",
