--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"react-icons": "^5.3.0",
 		"react-router-dom": "^6.23.0",
 		"react95": "^4.0.0",
-		"styled-components": "^6.1.13"
+		"styled-components": "^6.1.13",
+		"uuid": "^11.0.2"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.5.0",
