--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"@preact/signals": "^1.3.1",
 		"i18next": "^23.16.8",
 		"i18next-browser-languagedetector": "^8.0.0",
 		"i18next-http-backend": "^3.0.1",
