--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"preact-i18next": "^11.8.5",
 		"preact-iso": "^2.6.3",
 		"react": "npm:@preact/compat",
+		"react-calendar": "^5.1.0",
 		"react-dom": "npm:@preact/compat",
 		"react-icons": "^5.3.0",
 		"react-router-dom": "^6.23.0",
