--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@preact/signals": "^1.3.1",
+		"html2pdf.js": "^0.10.2",
 		"i18next": "^23.16.8",
 		"i18next-browser-languagedetector": "^8.0.0",
 		"i18next-http-backend": "^3.0.1",
