--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
 		"@lingui/core": "^5.1.2",
 		"@lingui/react": "^5.1.2",
 		"@preact/signals": "^1.3.1",
+		"@sentry/browser": "^7.0.0",
+		"@sentry/react": "^9.1.0",
+		"@sentry/vite-plugin": "^3.2.0",
 		"html2pdf.js": "^0.10.2",
 		"i18next": "^23.16.8",
 		"i18next-browser-languagedetector": "^8.0.0",
