--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@testing-library/preact": "^3.2.4",
 		"@types/jest": "^29.5.13",
 		"@vitest/ui": "^2.1.1",
+		"babel-plugin-macros": "^3.1.0",
 		"eslint": "^8.57.1",
 		"eslint-config-preact": "^1.5.0",
 		"eslint-plugin-import": "^2.31.0",
