--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"lingui": "lingui extract --clean && lingui compile --typescript"
 	},
 	"dependencies": {
+		"@emotion/is-prop-valid": "^1.3.1",
 		"@lingui/core": "^5.1.2",
 		"@lingui/react": "^5.1.2",
 		"@preact/signals": "^1.3.1",
